# hands_on_experiments_repo

./: .gitignore  pyproject.toml
NLP_handson/session_1/: book_1.ipynb
analytics_app/az_func_code/: function_app.py
analytics_app/discord_bot/: gsheet_service.py  main.py  responses.py  test_code.ipynb
analytics_app/end_url/app/: main.py
analytics_app/end_url/az_func_app/: .gitignore  function_app.py  pyproject.toml  requirements.txt
analytics_app/end_url/commands_register/: discord_commands.yaml  reg_commands.ipynb  register_commands.py
analytics_app/flask_app_end_url/: requirements.txt
analytics_app/flask_app_end_url/FlaskApp/: __init__.py
analytics_app/old_files/: end_url_main.py
blog/async_function_calling/: async_testing.py
blog/attention/: embedding_testing.ipynb  multi_head_attn.ipynb  single_head_attn.ipynb  single_head_attn_dates_embed.ipynb  single_head_attn_v2.ipynb  try_1.ipynb
blog/bayes_simu/: bayes_simu_example.ipynb
blog/echo_state_net/: ESN_implementation.ipynb  RNN_comparison.ipynb  try_1.ipynb
blog/model_training_thread_pool/: ml_model_threadpool.ipynb  ml_training_processpool.py
blog/rnn_unit/: rnn_functions.ipynb  test_code.ipynb  training.ipynb
blog/rnn_unit/test_files/: training.ipynb  training_v2.ipynb
blog/savgol_exp/: savgol_demonstration.ipynb
blog/simple_linear_reg/: SLR_experiment.ipynb
blog/vector_db/: chromadb.ipynb  data_generation.ipynb  sample_data.csv
blog/vector_db/stlit_app/: app_v1.py
blog/version_automation/sample_project/: CHANGELOG.md  pyproject.toml
blog/version_automation/sample_project/sample_project/: module1.py
blog/whapp_data_analytics/: read_gsheets.ipynb
datasets_preprocessing/kaggle_hotel_bookings/: data_processing.ipynb
image_processing/testing_convolutions/: idea_of_convolutions.ipynb
leetcode_probs/: excel_sheet_col_num.ipynb  k_items_max_sum.ipynb  longest_common_prefix.ipynb  merged_two_lists.ipynb  move_zeroes.ipynb  remov_duplicates_in_array.ipynb  remove_element.ipynb  remove_subfolder.ipynb  roman_to_int.ipynb  three_sum.ipynb  two_sum.ipynb  valid_parenthesis.ipynb
time_series_work/: data_processing_cumulative.ipynb  data_processing_noncumulative.ipynb  train_df_non_cumalative.csv
time_series_work/LSTM/: LSTM_application.ipynb
time_series_work/RL_for_ts/: RL_training.ipynb  RL_training_phase1.ipynb  RL_training_phase2.ipynb  analysis_of_data._phase1.ipynb  analysis_of_data._phase2.ipynb  finalised_df.csv  initial_analysis_of_data.ipynb  test_df.csv  train_df.csv
time_series_work/RNN/: RNN_application.ipynb  RNN_application_autoreg.ipynb  RNN_application_revamped.ipynb  data_processing.ipynb  test_df_2.csv  train_df_2.csv
time_series_work/autoencoder/: autoencoder_for_dim_reduction.ipynb  benchmark_model.ipynb  test_data_with_latent_feat.csv  train_data_with_latent_feat.csv
(+7 files in other folders)
