[tool.poetry]
name = "hands-on-trial-repo"
version = "0.1.0"
description = ""
authors = ["SanjayaElvitigala <elvitigalasanjaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pandas = "2.2.2"
seaborn = "0.13.2"
sktime = "0.28.0"
lightgbm = "4.3.0"
statsmodels = "0.14.1"
spacy = "3.7.4"
nltk = "3.8.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
