[tool.poetry]
name = "sample-project"
version = "0.2.0"
description = ""
authors = ["SanjayaElvitigala <elvitigalasanjaya@gmail.com>"]
readme = "README.md"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.branches.feature]
match = "(feature)"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.develop.dependencies]
python-semantic-release = "9.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
